# celescope-preprocessing

./: README.md  pyproject.toml
celescope_helper/: __main__.py  load_settings.py  location.json  pipeline.py  prepare_genome_reference_human.sh  prepare_genome_reference_mouse.sh  settings.json
click_app/: load_settings.py  main.py  pipeline.py  settings.json
