[tool.poetry]
name = "celescope-preprocessing"
version = "0.1.0"
description = "A tool to simplify count matrix preparation with celescope"
authors = ["edo98811 <edoardofilippi77@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
click = "^8.1.7"
pathlib = "^1.0.1"
typing = "^3.10.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
celescope-helper = "click_app.main:cli"